--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
-ko_fi: https://ko-fi.com/karbite
-buy_me_a_coffee: https://buymeacoffee.com/karbite
-thanks_dev: https://thanks.dev/gh/stdnt-c1
+ko_fi: karbite
+buy_me_a_coffee: karbite
+thanks_dev: stdnt-c1
 custom: https://trakteer.id/arbite/tip
